Solve stars bg overflow issue

--- a/src/App.css
+++ b/src/App.css
@@ -15,7 +15,6 @@
   right:0;
   bottom:0;
   width:100%;
-  height:100%;
   display:block;
 }
 
@@ -24,13 +23,8 @@
   to {background-position:-10000px 5000px;}
 }
 
-.stars {
-  background:#000 url(./assets/stars.png) repeat top center;
-  z-index:-2;
-}
-
 .twinkling{
   background:transparent url(./assets/twinkling.png) repeat top center;
-  z-index:-1;
+  z-index: -1;
   animation:move-twink-back 200s linear infinite;
 }
